adapting css to new version of mkdocs

--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -262,7 +262,7 @@ res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
 res
 </code></pre>
 
-<pre><code>#&gt;            task       learner mmce.test.mean
+<pre><code>#&gt;         task.id    learner.id mmce.test.mean
 #&gt; 1  iris-example   classif.lda     0.04000000
 #&gt; 2  iris-example classif.rpart     0.06666667
 #&gt; 3 Sonar-example   classif.lda     0.23577236
