--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -285,7 +285,7 @@ By setting <code>fix.factors = TRUE</code> these are avoided by adding a factor 
 <pre><code class="r">surv.lrn
 </code></pre>
 
-<pre><code>#&gt; Learner coxph from package survival
+<pre><code>#&gt; Learner cph from package survival
 #&gt; Type: surv
 #&gt; Name: Cox Proportional Hazard Model; Short name: coxph
 #&gt; Class: surv.coxph
